# evogrid

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yaml
src/: ActionType.h  Cell.cpp  Cell.h  CellVariant.h  Creature.cpp  Creature.h  Food.cpp  Food.h  GameWorld.cpp  GameWorld.h  main.cpp
